--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.2.0]
+        node-version: [16-alpine]
 
     steps:
       - uses: actions/checkout@v3
