--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preshow:dist": "npm run build",
     "show:dist": "live-server dist"
   },
-  "author": "coursar",
+  "author": "jjj",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -34,11 +34,11 @@
     "jest": "^26.6.3",
     "jsdoc": "^4.0.2",
     "mini-css-extract-plugin": "^1.3.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.9.0",
+    "webpack": "5",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "core-js": "^3.8.2"
+    "core-js": "3"
   }
 }
