--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -30,13 +30,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm install
+        run: yarn
 
       # - name: Run test
       #   run: npm run coverage
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       # - name: Setup Pages
       #   uses: actions/configure-pages@v2
