--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -46,6 +46,6 @@ jobs:
       #   with:
       #     path: 'dist'
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+      # - name: Deploy to GitHub Pages
+      #   id: deployment
+      #   uses: actions/deploy-pages@v1
